# ItemManager

ItemMenager/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
ItemMenager/ItemMenager/: asgi.py  settings.py  wsgi.py
ItemMenager/backend/: admin.py  models.py  signals.py  urls.py  views.py
ItemMenager/backend/migrations/: 0001_initial.py  0002_client_merchant_delete_userprofile.py  0003_rename_client_clientprofile_and_more.py
ItemMenager/front/frontend/: app.json  package-lock.json  package.json
ItemMenager/front/frontend/app/: index.tsx
ItemMenager/front/frontend/app-example/(tabs)/: index.tsx
ItemMenager/locale/en/LC_MESSAGES/: django.mo  django.po
ItemMenager/locale/pl/LC_MESSAGES/: django.mo  django.po
